<resources>
    <string name="app_name">shoppingApp Test</string>
    <string name="register_here">Register Here</string>
    <string name="register_info">please add your profile pic</string>
    <string name="your_first_name">your First Name</string>
    <string name="your_second_name">your Second Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="reenter_password">reenter password</string>
    <string name="logo">logo of the app</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_home_page">homePage</string>
    <string name="tab_text_1">budgeting</string>
    <string name="tab_text_2">expired item</string>
    <string name="tab_text_3">scheduleing</string>
    <string name="tab_text_4">completed shopping list</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_home_pg">homePg</string>
    <string name="title_activity_my_home_page">Welcome to Smart Shopping</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="done_shopping">Done shopping fragment</string>
    <string name="expired_items">Expired items Fragment</string>
    <string name="schedule">Schedule Fragment</string>
    <string name="shopping_list">Shopping list fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_creating_shopping_list">creatingShoppingList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>