<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerUser">
    <TextView
        android:id="@+id/registerTxtView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"



        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@drawable/banner"
        app:layout_constraintTop_toBottomOf="@+id/registerTxtView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"

        android:layout_marginTop="10dp"
        android:cropToPadding="true"

        android:contentDescription="@string/logo" />



    <TextView
        android:id="@+id/registerTxtView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="wellcome to "
        android:textSize="17sp"
       app:layout_constraintTop_toBottomOf="@+id/registerTxtView1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_first_name"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/secondName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_second_name"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/rgEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_your_email"
        app:layout_constraintTop_toBottomOf="@+id/secondName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/rgPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_your_password"
        app:layout_constraintTop_toBottomOf="@+id/rgEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/rgReenterPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/reenter_password"
        app:layout_constraintTop_toBottomOf="@+id/rgPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/rgReenterPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>